--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.1/css/bootstrap-datepicker.min.css">
 
 	<link rel="stylesheet" href="css/bootstrap-material-design.min.css">
-	<!--<link rel="stylesheet" href="css/ripples.min.css">-->
+	<link rel="stylesheet" href="css/ripples.min.css">
 	<link rel="stylesheet" href="css/animate.css">
 	<link rel="stylesheet" href="css/style.css">
 	
